# human-ergodicObj

./: .gitignore  CMakeLists.txt  DKLfigs.py  Exp-pwr.r  ExpDrawings.py  KLmetric.py  KLsamps.py  MIGMDA.hpp  Makefile  README.md  SAC.hpp  VFfigs.py  cartpend.hpp  densityplots.py  dklmda_di_image.cpp  dklmda_si_image.cpp  dklsac_di_image.cpp  dklsac_doubleint.cpp  doubleint.hpp  edgedetect.cpp  ergodic_cost.hpp  ergsac_cartpend.cpp  ergsac_dilincoln.cpp  ergsac_doubleint.cpp  ergsac_mda.cpp  error_cost.hpp  filesplit.cpp  main.cpp  mda_cartpend.cpp  mig_mda_cartpend.cpp  rk4_int.cpp  rk4_int.hpp  sac_cartpend.cpp  sac_doubleint.cpp
DataProc/: cleaner.hpp  dkl.hpp  err.hpp
SAC_MDA/: MIGMDA.hpp  SAC.hpp  dkl_cost.hpp  dklimg_cost.hpp  doubleint.hpp  ergodic_cost.hpp  singleint.hpp
Virtual_Fixt/: imagewalls.hpp
